tesla-charging/deploy/evcc-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: evcc
  labels:
    app: evcc
spec:
  ports:
    - port: 7070
      protocol: TCP
      targetPort: 7070
  selector:
    app: evcc
