tesla-charging/deploy/mosquitto-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mosquitto
  labels:
    app: mosquitto
spec:
  ports:
    - port: 1883
      protocol: TCP
      targetPort: 1883
  selector:
    app: mosquitto
