tesla-charging/deploy/postgres-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: teslamate-postgres
  labels:
    app: teslamate-postgres
spec:
  ports:
    - port: 5432
      protocol: TCP
      targetPort: 5432
  selector:
    app: teslamate-postgres
