tesla-charging/deploy/wellknown-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: tesla-wellknown
  labels:
    app: tesla-wellknown
spec:
  ports:
    - port: 8080
      protocol: TCP
      targetPort: 8080
  selector:
    app: tesla-wellknown
